--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -12,10 +12,11 @@
 <div id="suggest"><a href="#">Track Beach Activity</a></div>
 </div>
 
+
 <style type="text/css">
 
-#suggest a:link {color:red;}
-#suggest a:visited {color:red;}
+#suggest a:link {color:#2a6496;}
+#suggest a:visited {color:#2a6496;}
 
 .activitypage{
  	font-size:25px;
