--- a/views/suggestact.handlebars
+++ b/views/suggestact.handlebars
@@ -10,6 +10,12 @@
 	</div>
 </div>
 <style type="text/css">
+a{color:red;}
+a:link{color:red;}
+a:hover{color:red;}
+a:visited{color:red;}
+a:active{color;red;}
+
 .activitypage{
  	font-size:25px;
  	text-align:center;
