--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -87,7 +87,7 @@
 	font-size: 27px;
 }
 .buttonppl{font-size:27px;}
-#confirmation{font-size: 25px;color:red;}
+#confirmation{font-size: 25px;color:#333333;}
 </style>
 <script type="text/javascript">
 //this portion of the script gets the current time
