--- a/views/suggestact.handlebars
+++ b/views/suggestact.handlebars
@@ -15,11 +15,11 @@
 </div> -->
 
 <style type="text/css">
-a{color:red;}
-a:link{color:red;}
-a:hover{color:red;}
-a:visited{color:red;}
-a:active{color:red;}
+a{color:#2a6496;}
+a:link{color:#2a6496;}
+a:hover{color:#428bca;}
+a:visited{color:#2a6496;}
+a:active{color:#2a6496;}
 
 .activitypage{
  	font-size:25px;
@@ -30,6 +30,7 @@ a:active{color:red;}
  }
  #pagetitle{
  	padding-top:5px;
+ 	padding-bottom:15px;
  	font-size:40px;
  	letter-spacing: 1.5px
  }
@@ -69,6 +70,7 @@ width:170px;
 background: none;
 margin-left:auto;
 margin-right:auto;
+
 
 }
 </style>
