--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -15,6 +15,9 @@
   letter-spacing: 1.5px;
   padding-top:15px;
 }
+#name{
+  padding-bottom:10px;
+}
 #address{font-size:15px;}
 #mapimg{padding:10px;}
 #location{font-size:25px;}
