--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -5,7 +5,7 @@
 		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" src="/images/2bcrowd.png"></div></li>
 		<li><div class="button" id="Oceanside"><a href="#"> Ocean Beach</a><img class="img-responsive" src="/images/1bcrowd.png"></div></li>
 		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img class="img-responsive" src="/images/2bcrowd.png"></div></li>
-		<li><div class="button" id="Coronado"><a href="#"> Coronado Beach</a><img class="img-responsive" src="/images/3bcrowd.png"></div></li>
+		<li><div class="button" id="Coronado"><a href="#"> Coronado</a><img class="img-responsive" src="/images/3bcrowd.png"></div></li>
 		<li><div class="button" id="MissionBay"><a href="#">Mission Bay</a><img class="img-responsive" src="/images/3bcrowd.png"></div></li>
 	</ul>
 </div>
