--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -5,8 +5,10 @@
 <div id="time"> 2:10PM </div>
 
 <div id="icon"> <img src="/images/sunclouds1.png" class="img-responsive"></div><div id="temp"> 70 </div> 
+ <div id="highlow"> High: <div id="temp_max"> </div>
+    Low: <div id="temp_min"> </div>
+ </div>
  
-<div id="highlow"> high: 74 low: 59 </div>
 <div id="sunset"> Sunset: 6:02PM </div> 
 
 <!-- <div id="weeklywe"> <table style="width:150px" align="center">
