--- a/public/css/beachlist.css
+++ b/public/css/beachlist.css
@@ -31,15 +31,8 @@ li img{
 	width:75%;
 	float:left;
 }
-#LaJolla {
-}
-#Oceanside {
-}
-#pb {
-
-}
-#Coronado {
-
-}
-#MissionBay {
-}
+#LaJolla {}
+#Oceanside {}
+#pb {}
+#Coronado {}
+#MissionBay {}
