--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -2,11 +2,11 @@
 <div class="arrow"><a href="/"><img src="/images/arrowicon.png"></a></div><div class="pagename">Life's a Beach</div></div>
 <div class="button" id="blist">	
 	<ul>
-		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" src="/images/2bcrowd.png"></div></li>
-		<li><div class="button" id="Oceanside"><a href="#"> Ocean Beach</a><img class="img-responsive" src="/images/1bcrowd.png"></div></li>
-		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img class="img-responsive" src="/images/2bcrowd.png"></div></li>
-		<li><div class="button" id="Coronado"><a href="#"> Coronado</a><img class="img-responsive" src="/images/3bcrowd.png"></div></li>
-		<li><div class="button" id="MissionBay"><a href="#">Mission Bay</a><img class="img-responsive" src="/images/3bcrowd.png"></div></li>
+		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" class="blisticon" src="/images/2bcrowd.png"></div></li>
+		<li><div class="button" id="Oceanside"><a href="#"> Ocean Beach</a><img class="img-responsive" class="blisticon" src="/images/1bcrowd.png"></div></li>
+		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img class="img-responsive" class="blisticon" src="/images/2bcrowd.png"></div></li>
+		<li><div class="button" id="Coronado"><a href="#"> Coronado</a><img class="img-responsive" class="blisticon" src="/images/3bcrowd.png"></div></li>
+		<li><div class="button" id="MissionBay"><a href="#">Mission Bay</a><img class="img-responsive" class="blisticon" src="/images/3bcrowd.png"></div></li>
 	</ul>
 </div>
 
