--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -35,12 +35,16 @@ var link;
     link = "https://maps.google.com/maps/ms?msid=200417316614940091469.0004a056d1e794d37efeb&msa=0&dg=feature";
  	}else if(name == "Oceanside"){
      	location = "/images/OBMap.png";
+      link = "https://maps.google.com/maps/ms?msid=200417316614940091469.0004a056d1e794d37efeb&msa=0&dg=feature";
    	}else if(name == "PacificBeach"){
      	location = "/images/PBMap.png";
+      link = "https://maps.google.com/maps/ms?msid=200417316614940091469.0004a056d1e794d37efeb&msa=0&dg=feature";
     }else if(name == "Coronado"){
      	location = "/images/CorMap.png";
+      link = "https://maps.google.com/maps/ms?msid=200417316614940091469.0004a056d1e794d37efeb&msa=0&dg=feature";
     }else if(name == "MissionBay"){
      	location = "/images/MsMap.png";
+      link = "https://maps.google.com/maps/ms?msid=200417316614940091469.0004a056d1e794d37efeb&msa=0&dg=feature";
     }
  	var tag = "<img src=\"" + location +"\" >";
  	$("div #mapdata").html(tag);
