trying to get analytics to work

--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -5,7 +5,10 @@
 <!-- Medium: You can build a beach towel fort -->
 <!-- Low: Is it the zombie apocalypse?   --> 
 
-<div id="hottiealert"> Hottie Alert: <a href="#"><img id="1" src="/images/gheart.png" class="img-responsive"></a><a href="#"><img id="2" src="/images/rheart.png" class="img-responsive"></a><a href="#"><img id="3" src="/images/rheart.png" class="img-responsive"></a><a href="#>"><img id="4" src="/images/rheart.png" class="img-responsive"></a></div>
+<div id="hottiealert"> Hottie Alert: <div><a href="#"><img id="1" src="/images/gheart.png" class="img-responsive"></a></div>
+<div><a href="#"><img id="2" src="/images/rheart.png" class="img-responsive"></a></div>
+<div><a href="#"><img id="3" src="/images/rheart.png" class="img-responsive"></a></div>
+<div><a href="#>"><img id="4" src="/images/rheart.png" class="img-responsive"></a></div></div>
 
 
 <div style="clear: both;"></div>
