--- a/views/suggestact.handlebars
+++ b/views/suggestact.handlebars
@@ -9,8 +9,7 @@
 		{{/each}}
 	</div>
 </div>
-
-<!-- 
+<!--
 <div id="suggest"><a href="#">Track Beach Activity</a></div>
 </div> -->
 
@@ -80,7 +79,9 @@ var beachloc = "{{name}}";
 $(document).ready(function(){
 	$(".arrow a").click(function() {$(".sbcontent").load("/activity/"+beachloc,errorResponse); });
 	{{#each activity}}
-	$("a[id=\"{{name}}\"]").click(function(){$(".sbcontent").load("/addactivity/"+beachloc+"/{{name}}", errorResponse);
+	$("a[id=\"{{name}}\"]").click(function(){
+ga("send", "event", "Category", "Action");
+		$(".sbcontent").load("/addactivity/"+beachloc+"/{{name}}", errorResponse);
 	});
 	{{/each}}
 });
