--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -59,6 +59,16 @@ margin-left:auto;
 margin-right:auto;
 }
 </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48659430-1', 'beachbum.herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
 <script src="//www.google-analytics.com/cx/api.js?experiment=nA7cbYV-TLOFI7cfd-0G9Q"></script>
 <script>
 var n = "{{name}}";
