--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,7 +1,7 @@
 <div class="crowdalert">
 <div id="crowdpage"> Crowd-O-Meter </div>
 
-<div id="explain"> Click the icons to update the Crowd-o-meter</div>
+<div id="explain"> Beach Bum, click the icons to update Crowd-o-meter</div>
 {{#with crowd}}
 <div id="crowdstatus">{{status}}</div>
 <div id="lastupdate"> last update: {{lastupdate}} </div>
@@ -16,13 +16,7 @@
 <div><a href="#"><img id="3" src="/images/rheart.png" class="img-responsive"></a></div>
 <div><a href="#>"><img id="4" src="/images/rheart.png" class="img-responsive"></a></div></div>
 
-{{#with crowd}}
-<div id="crowdstatus">{{status}}</div>
-<div id="lastupdate">last update: {{lastupdate}}</div>
-{{/with}}
 
-
-<div id="hottiealert"> Hottie Alert: <div id="iconfloat"><a href="#"><img id="1" src="/images/gheart.png" class="img-responsive"></a><a href="#"><img id="2" src="/images/rheart.png" class="img-responsive"></a><a href="#"><img id="3" src="/images/rheart.png" class="img-responsive"></a><a href="#>"><img id="4" src="/images/rheart.png" class="img-responsive"></a></div></div>
 <div style="clear: both;"></div>
 
 
@@ -82,7 +76,7 @@ div #crowdstatus{
 	/*color: #2a6496;*/
 	font-size: 40px;
 	padding-top: 15px;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 }
 #crowd{
 	color: #ef4444;
