--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -11,7 +11,7 @@
 
 <!-- last update went away, when i first log into the page, the time is wrong, moving the Thanks! to the bottom of the page?  -->
 
-<div id="hottiealert"> Hottie Alert: <div><a href="#"><img id="1" src="/images/gheart.png" class="img-responsive"></a></div>
+<div id="hottiealert"> Hottie Alert: <div id="hottieview"><div><a href="#"><img id="1" src="/images/gheart.png" class="img-responsive"></a></div>
 <div><a href="#"><img id="2" src="/images/rheart.png" class="img-responsive"></a></div>
 <div><a href="#"><img id="3" src="/images/rheart.png" class="img-responsive"></a></div>
 <div><a href="#>"><img id="4" src="/images/rheart.png" class="img-responsive"></a></div></div>
@@ -37,13 +37,17 @@
 #crowdicons{font-size:27px;}
 
 #crowdstatus a:visited {
-color:#CC3300;
+color:#EF4444;
 }
+
 div #crowdstatus{
 	font-size: 25px;
 	text-align: center;
-	color:#CC3300 !important;
+	color:#EF4444 !important;
 
+}
+#hottieview{
+margin-left:20%;
 }
 #explain{
 	text-align: center;
