--- a/public/css/surf.css
+++ b/public/css/surf.css
@@ -9,6 +9,8 @@
 	margin-bottom: 5px;
 	padding-top: 15px;
 }
+.height a:visited {color:#2a6496;}
+
 .height{
 	text-align: center;
 	font-size: 50px;
