--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -1,3 +1,18 @@
+<!-- Google Analytics Content Experiment code -->
+<!--script>function utmx_section(){}function utmx(){}(function(){var
+k='82989344-1',d=document,l=d.location,c=d.cookie;
+if(l.search.indexOf('utm_expid='+k)>0)return;
+function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
+indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
+length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
+'<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
+'://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
+valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
+'" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
+</script><script>utmx('url','A/B');</script>
+<!-- End of Google Analytics Content Experiment code -->
+<head><script src="//www.google-analytics.com/cx/api.js?experiment=NKWEO9DjThCQQQKUU-dabA"></script></head>
 <div class="activitypage">
 	<div id="pagetitle"> Activity Tracker </div>
 	<div id="activityicon"><img src="/images/sun.png"></div>	
@@ -69,22 +84,28 @@ margin-right:auto;
   ga('send', 'pageview');
 
 </script>
-<script src="//www.google-analytics.com/cx/api.js?experiment=nA7cbYV-TLOFI7cfd-0G9Q"></script>
+
+
 <script>
 var n = "{{name}}";
 console.log(n);
 function loadSA(){$(".sbcontent").load("/suggestact/"+n,errorResponse);}
 function loadSA2(){$(".sbcontent").load("/suggestact2/"+n,errorResponse);}
-var chosenVariation = cxApi.chooseVariation();
-console.log("was chosen " + choseVariation);
+//var chosenVariation = cxApi.chooseVariation();
+var chosenVariation;
+var val = Math.random();
+if( val < 0.5)
+	chosenVariation  = 0;
+else 
+	chosenVariation  = 1;
+
+console.log("was chosen " + chosenVariation);
 var pageVariations = [
   function() {
-ga("send", "event", "Category", "Action");
-  	$("#suggest a").click(function() { loadSA(); });},
+  	$("#suggest a").click(function() { loadSA(); }); },
   function() {
-  	ga("send", "event", "Category", "Action");
-    $("#suggest a").click(function() { loadS2(); });
-  }];
+    $("#suggest a").click(function() { loadSA2();});
+  } ];
 
 $(document).ready(function(){
 	pageVariations[chosenVariation];
