--- a/public/css/index.css
+++ b/public/css/index.css
@@ -50,6 +50,7 @@ body{
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
   	height: 70px; /* height for all three buttons on front page*/
 	background: #F0DE62;/*default background color for buttons*/
+	padding-top: 7px;
 }
 #tagline{
 	font-size: 26px;
@@ -76,6 +77,7 @@ body{
 	clear:both;
 	width:100%;
 	letter-spacing: 2px;
+	/*text-shadow: 2px 2px #000000;*/
 	/*background:green; /*sign in background color*/
 }
 #homeimg{width:100%;}
