--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -17,7 +17,7 @@
 	/*color:#F0DE62;*/
 	/*background-color: #2a6496;*/
 	height: 45px;
-	text-shadow: 2px 2px #ecede8; 
+	text-shadow: 2px 2px #d3d3d3; 
 }
 #topnavname{
 	padding-left: auto;
