--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -48,6 +48,11 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
  	height: 115px;
  	margin-left:auto;
 	margin-right:auto;
+	display:inline-block;
+    position:absolute;
+    left:30%;
+    top:90%;
+    z-index:-1;
  }
 #bestact{
 	font-size:30px;
