--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -14,7 +14,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 <!-- End of Google Analytics Content Experiment code -->
 <head><script src="//www.google-analytics.com/cx/api.js?experiment=NKWEO9DjThCQQQKUU-dabA"></script></head>
 <div class="activitypage">
-	<div id="pagetitle"> Activity Tracker </div>
+	<div id="pagetitle"> Activity Tracker </div><br>
 	<div id="activityicon"><img src="/images/sun.png"></div>	
 	<div class="actlist"> 
 	{{#each activity}}
@@ -45,13 +45,13 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
  	letter-spacing: 1.5px
  }
  #activityicon{
- 	height: 115px;
+ 	height: 50%;
  	margin-left:auto;
 	margin-right:auto;
 	display:inline-block;
     position:absolute;
-    left:30%;
-    top:90%;
+    left:35%;
+    top:5%;
     z-index:-1;
  }
 #bestact{
