--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -5,10 +5,10 @@
 
 <!-- last update went away, when i first log into the page, the time is wrong, moving the Thanks! to the bottom of the page?  -->
 
-<div id="hottiealert"> Hottie Alert: <div id="hottieview"><div><a href="#"><img id="1" src="/images/gheart.png" class="img-responsive"></a></div>
+<div id="hottiealert"> Hottie Alert: <div id="hottieview"><div><a href="#"><img id="1" src="/images/rheart.png" class="img-responsive"></a></div>
 <div><a href="#"><img id="2" src="/images/rheart.png" class="img-responsive"></a></div>
-<div><a href="#"><img id="3" src="/images/rheart.png" class="img-responsive"></a></div>
-<div><a href="#>"><img id="4" src="/images/rheart.png" class="img-responsive"></a></div></div>
+<div><a href="#"><img id="3" src="/images/gheart.png" class="img-responsive"></a></div>
+</div>
 
 <div style="clear: both;"></div>
 
@@ -80,7 +80,7 @@ margin-left:20%;
 	width:16%;
 	height: 16%;
 	float:left;
-	margin-left: 10px;
+	margin-left: 20px;
 }
 #crowdpage{
 	/*color: #2a6496;*/
