--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,15 +1,13 @@
 <div class="crowdalert">
 <div id="crowdpage"> Crowd-O-Meter </div>
 
-<<<<<<< HEAD
+
 <div id="explain"> Beach Bum, click the icons to update Crowd-o-meter</div>
 
 <!-- last update went away, when i first log into the page, the time is wrong, moving the Thanks! to the bottom of the page?  -->
 
-<div id="hottiealert"> Hottie Alert: <div id="hottieview"><div><a href="#"><img id="1" src="/images/rheart.png" class="img-responsive"></a></div>
-=======
-<div id="hottiealert"> Hottie Alert: <div id="hottieview"><div><a href="#"><img id="1" src="/images/gheart.png" class="img-responsive"></a></div>
->>>>>>> 24606cdf8f43cf6a131f47ca8702ea093ed502f5
+<div id="hottiealert"> Hottie Alert: 
+	<div id="hottieview"><div><a href="#"><img id="1" src="/images/rheart.png" class="img-responsive"></a></div>
 <div><a href="#"><img id="2" src="/images/rheart.png" class="img-responsive"></a></div>
 <div><a href="#"><img id="3" src="/images/gheart.png" class="img-responsive"></a></div>
 </div>
