--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,6 +35,7 @@
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/beachbum.js"></script>
+<script src="http://www.google-analytics.com/cx/api.js?experiment=NKWEO9DjThCQQQKUU-dabA"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -64,7 +65,6 @@ var loc = 0;
   loc++;
   if(loc > (tagarr.length))
     loc = 0;
-  console.log(loc);
 }, 2000);
 	$("#login a").click(function() { loadMainContent("login"); });
 	$("#find a").click(function() { loadMainContent("beachlist"); });
