commit without var

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -111,7 +111,7 @@ console.log("was chosen " + chosenVariation);
 		$("#suggest a").click(function() { loadSA2();ga("send", "event", "Category", "Action");});	
 	}
 
-	pageVariations[chosenVariation];
+	//pageVariations[chosenVariation];
 	//$("#suggest a").click(function() { loadSA(); });
 	//loadMainContent("/suggestActivity/LaJolla")
 });
