--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -52,11 +52,12 @@
 	height: 50px;	
 }
 .iconname{
-	width:50px;
-	height:50px;
-	float:left;
-	font-size: 30px;
-	margin-left:;
+width:50px;
+height:50px;
+float:left;
+font-size: 30px;
+margin-left:0px;
+clear:both;
 }
 .sbcontent{
 	line-height: 230%;
@@ -71,15 +72,13 @@ div .sbcontent{
 	font-family:'Sintony'; 
 }
 .sidebar{
-	width:100%;
-	float:left;
-	display:inline;
-	z-index: 2;
-	-moz-border-radius: 12px; /* FF1+ */
-	-webkit-border-radius: 12px; /* Saf3-4 */
-  	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */
-  	text-align:center;	
-  	margin-left:15%;
+width:9%;
+position:absolute;
+float:left;
+z-index: 2;
+-moz-border-radius: 12px; /* FF1+ */
+-webkit-border-radius: 12px; /* Saf3-4 */
+   border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
 }
 .beachcontent{}
 .home img{
