--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -104,9 +104,9 @@ console.log(n);
 var chosenVariation = cxApi.chooseVariation();
 console.log("was chosen " + chosenVariation);
 	if(chosenVariation == 0 ){
-		$("#suggest a").click(function() { loadSA(); ga("send", "event", "activity", "click");});
+		$("#suggest a").click(function() { ga("send", "event", "activity", "click");loadSA(); });
 	} else {
-		$("#suggest a").click(function() { loadSA2();ga("send", "event", "activity", "click");});	
+		$("#suggest a").click(function() { ga("send", "event", "activity", "click");loadSA2();});	
 	}
 
 	//pageVariations[chosenVariation];
