--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -52,29 +52,30 @@
 	height: 50px;	
 }
 .iconname{
-width:50px;
+/*width:50px;*/
+width:15%;
 height:50px;
-float:left;
+display:inline-block;
 font-size: 30px;
-margin-left:0px;
+margin-left:2%;
+margin-right:2%;
+/*margin-left:0px;*/
 clear:both;
 }
 .sbcontent{
 	line-height: 230%;
 	position:relative;
-	width:80%;
-	height:300px;
-	float:right;
+	width:100%;
+	/*height:300px;
+	/*float:right;*/
 	z-index: 2;
 	border-radius: 3px;
 }
-div .sbcontent{
-	font-family:'Sintony'; 
-}
+div .sbcontent{font-family:'Sintony'; }
 .sidebar{
-width:9%;
-position:absolute;
-float:left;
+width:100%;
+/*position:absolute;
+/*float:left;*/
 z-index: 2;
 -moz-border-radius: 12px; /* FF1+ */
 -webkit-border-radius: 12px; /* Saf3-4 */
