--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -71,7 +71,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 padding-top:10px;
 font-size: 30px;
 height: 40px; /* height for all three buttons on front page*/
-width:170px;
+width:100%;
 background: none;
 margin-left:auto;
 margin-right:auto;
