--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -43,7 +43,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
  	letter-spacing: 1.5px
  }
  #activityicon{
- 	height: 50%;
+ 	/*height: 50%;*/
  	margin-left:auto;
 	margin-right:auto;
 	display:inline-block;
