--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -13,18 +13,18 @@
 </div>
 
 <div style="clear: both;"></div>
+</div>
 
-<div id="space"> </div>
+<div id="crowdicons"> Crowd Alert: </div>
 
-<div id="crowdicons"> Crowd Alert: <div id="crowdlayout">
-<div class="buttonppl" id="hcrowd"><a href="#"> <img src="/images/3person.png" class="img-responsive"></a></div>
-<div class="buttonppl" id="mcrowd"><a href="#"><img src="/images/2person.png" class="img-responsive"></a></div>
-<div class="buttonppl" id="lcrowd"><a href="#"><img src="/images/1person.png" class="img-responsive"></a></div></div>
+<div id="crowdlayout">
+<div class="buttonppl" id="lcrowd"><a href="#"><img src="/images/1person.png" class="img-responsive buttonppl"></a></div>
+<div class="buttonppl" id="mcrowd"><a href="#"><img src="/images/2person.png" class="img-responsive buttonppl"></a></div>
+<div class="buttonppl" id="hcrowd"><a href="#"><img src="/images/3person.png" class="img-responsive buttonppl"></a></div>
 <div style="clear: both;"></div>
 </div>
 
 <div id="confirmation"></div>
-</div>
 
 {{#with crowd}}
 <div id="crowdstatus">{{status}}</div>
@@ -39,30 +39,22 @@
 
 <style>
 #crowdicons{font-size:27px;}
-
-#crowdstatus a:visited {
-color:#EF4444;
-}
-
+#crowdstatus a:visited {color:#EF4444;}
 div #crowdstatus{
 	font-size: 25px;
 	text-align: center;
 	color:#EF4444 !important;
 
 }
-#space{
-	padding-top:5%;
-}
-#hottieview{
-margin-left:20%;
-}
+#hottieview{margin-left:20%;}
 
 #lastupdate{
 	font-size: 20px;
 	text-align: center;
 }
-#crowdlayout{
-	margin-right:35%;
+div #crowdlayout{
+	margin:1% auto;
+	text-align: center;
 }
 .crowdalert{
 	text-align: center;
@@ -92,26 +84,22 @@ margin-left:20%;
 	padding-bottom:20px;
 }
 #lcrowd img{
-	float: right;
-	width: 18%;
-	color: black;
+	/*float: right;*/
 	margin-right: 10px;
+	display: inline-block;
 }
 #mcrowd img{
-	float: right;
-	width: 18%;
+	/*float: right;*/
 	margin-right:10px;
+	display: inline-block;
 }
 #hcrowd img{
-	float: right;
-	width: 18%;
-	font-size: 27px;
+	/*float: right;*/
 	padding-right:0px;
-
 	display: inline-block;
-	color: #2a6496;
 }
-.buttonppl{font-size:27px;}
+.buttonppl{display:inline-block; height:50px;}
+.buttonppl{height:50px;width: 50px;}
 #confirmation{
 	font-size: 20px;
 	color:#333333;
